Get rid of this deprecation warning